--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,16 +13,16 @@ net_client_steamdatagram_enable_override 1
 // Audio
 ////
 
-volume 0.24
+volume 0.25
 snd_menumusic_volume 0
-snd_roundstart_volume 0.06
-snd_roundaction_volume 0.06
-snd_roundend_volume 0.06
-snd_mapobjective_volume 0.12
-snd_tensecondwarning_volume 0.06
-snd_deathcamera_volume 0.12
-snd_mvp_volume 0.12
-snd_voipvolume 0.48
+snd_roundstart_volume 0.01
+snd_roundaction_volume 0.01
+snd_roundend_volume 0.01
+snd_mapobjective_volume 0.09
+snd_tensecondwarning_volume 0.09
+snd_deathcamera_volume 0.09
+snd_mvp_volume 0.01
+snd_voipvolume 0.25
 sv_voiceenable true
 voice_modenable true
 snd_headphone_eq 0
@@ -31,10 +31,6 @@ snd_steamaudio_enable_perspective_correction true
 snd_mute_losefocus false
 snd_mute_mvp_music_live_players true
 snd_mixahead 0.025
-snd_duckerattacktime 0.5
-snd_duckerreleasetime 2.5
-snd_duckerthreshold 0.15
-snd_ducktovolume 0.55
 sound_device_override ""
 cl_mute_all_but_friends_and_party 0
 cl_mute_enemy_team false
@@ -45,7 +41,7 @@ cl_player_ping_mute 0
 ////
 fps_max 160
 fps_max_ui 80
-r_fullscreen_gamma 2.3
+r_fullscreen_gamma 2
 r_drawtracers_firstperson false
 r_player_visibility_mode 1
 r_show_build_info false
@@ -55,7 +51,7 @@ func_break_max_pieces 15
 ////
 // Mouse
 ////
-sensitivity 1.28 // 800 DPI
+sensitivity 1.14 // 800 DPI
 zoom_sensitivity_ratio 0.92
 m_pitch 0.022
 m_yaw 0.022
@@ -101,7 +97,7 @@ cl_buywheel_donate_key 0
 cl_silencer_mode 0
 cl_teamid_overhead_mode 1
 cl_teamid_overhead_colors_show 1
-cl_hide_avatar_images 0
+cl_hide_avatar_images 2
 cl_allow_animated_avatars false
 cl_sanitize_player_names false
 cl_sanitize_muted_players false
@@ -110,7 +106,7 @@ cl_autohelp true
 cl_scoreboard_mouse_enable_binding +attack2
 cl_ping_fade_distance 300
 cl_ping_fade_deadzone 120
-cl_playerspray_auto_apply false
+cl_playerspray_auto_apply true
 mapoverview_icon_scale 1.0
 ui_mainmenu_bkgnd_movie_B0B70CFF ar_baggage
 ui_inspect_bkgnd_map_B0B70CFF warehouse
@@ -176,7 +172,7 @@ alias "half_buy_1" "buy_midtier_2; buy_vest" // T:$1700 CT:$1900
 alias "half_buy_2" "buy_pistol_2; buy_vest" // 1350$
 alias "eco_buy" "buy_pistol_1" // 300$
 alias "grenades_1" "buy_molotov; buy_smoke; buy_flash; buy_hegrenade" // T:1200$ CT:1400$
-alias "grenades_2" "buy_molotov; buy_smoke; buy_flash; buy_flash"  // T:1100$ CT:1300$
+alias "grenades_2" "buy_smoke; buy_flash; buy_flash; buy_molotov"  // T:1100$ CT:1300$
 alias "grenades_3" "buy_smoke; buy_flash; buy_flash; buy_hegrenade" // 1000$
 alias "grenades_4" "buy_flash; buy_smoke" // 500$
 alias "buy_kevlar" "buy vesthelm; buy vest" // 1000$
@@ -211,19 +207,19 @@ alias "+de_right" "+right; +right"
 alias "-de_right" "-right; -right; -right"
 
 //// Volume aliases
-alias "volume_up" "volume_set_60"
-alias "volume_down" "volume_set_20"
-alias "volume_set_0" "alias volume_down volume_set_0; alias volume_up volume_set_20; volume 0.0"
-alias "volume_set_20" "alias volume_down volume_set_0; alias volume_up volume_set_40; volume 0.12"
-alias "volume_set_40" "alias volume_down volume_set_20; alias volume_up volume_set_60; volume 0.24"
-alias "volume_set_60" "alias volume_down volume_set_40; alias volume_up volume_set_80; volume 0.36"
-alias "volume_set_80" "alias volume_down volume_set_60; alias volume_up volume_set_100; volume 0.48"
-alias "volume_set_100" "alias volume_down volume_set_80; alias volume_up volume_set_100; volume 0.60"
+alias "volume_up" "volume_set_70"
+alias "volume_down" "volume_set_30"
+alias "volume_set_5" "alias volume_down volume_set_5; alias volume_up volume_set_10; volume 0.003"
+alias "volume_set_10" "alias volume_down volume_set_5; alias volume_up volume_set_30; volume 0.01"
+alias "volume_set_30" "alias volume_down volume_set_10; alias volume_up volume_set_50; volume 0.09"
+alias "volume_set_50" "alias volume_down volume_set_30; alias volume_up volume_set_70; volume 0.25"
+alias "volume_set_70" "alias volume_down volume_set_50; alias volume_up volume_set_100; volume 0.49"
+alias "volume_set_100" "alias volume_down volume_set_70; alias volume_up volume_set_100; volume 1"
 
-//// Mute aliases
+//// Mute aliases (not in use)
 alias "mute_players" "voice_off"
 alias "voice_off" "alias mute_players voice_on; snd_voipvolume 0; say_team Players muted."
-alias "voice_on" "alias mute_players voice_off; snd_voipvolume 0.36; say_team Players unmuted."
+alias "voice_on" "alias mute_players voice_off; snd_voipvolume 0.25; say_team Players unmuted."
 
 //// Radar aliases
 alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 1.0"
@@ -265,8 +261,8 @@ alias "-show_eq" "cl_teamid_overhead_mode 1"
 //// Show scores with telemetry toggle
 alias "+show_telemetry" "cl_hud_telemetry_ping_show 2; cl_hud_telemetry_net_misdelivery_show 2; cl_hud_telemetry_frametime_show 2"
 alias "-show_telemetry" "cl_hud_telemetry_ping_show 0; cl_hud_telemetry_net_misdelivery_show 0; cl_hud_telemetry_frametime_show 0"
-alias "+showscores_telemetry" "+showscores; +show_telemetry"
-alias "-showscores_telemetry" "-showscores; -show_telemetry"
+alias "+showscores_telemetry" "+show_telemetry; +showscores"
+alias "-showscores_telemetry" "-show_telemetry; -showscores"
 
 ////
 // Binds
@@ -283,7 +279,7 @@ bind "MOUSE3" "player_ping"
 bind "MOUSE4" "slot10" // Molotov
 bind "MOUSE5" "slot7" // Flashbang
 bind "MWHEELUP" "+jump"
-bind "MWHEELDOWN" "mute_players" // "clutch_mode_toggle"
+bind "MWHEELDOWN" "clutch_mode_toggle" // "mute_players"
 
 //// Function keys
 bind "ESCAPE" "cancelselect"
@@ -297,7 +293,7 @@ bind "SPACE" "+jumpduck"
 
 //// Upper function keys
 bind "F1" "ignorerad"
-bind "F2" "demoui"
+bind "F2" "ignoremsg"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
 bind "F5" "full_buy_1"
