--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -74,13 +74,14 @@ viewmodel_fov 68
 viewmodel_offset_x 2.5
 viewmodel_offset_y 0
 viewmodel_offset_z -1.5
-cl_usenewbob true
+cl_prefer_lefthanded false
 
 //// Radar
 cl_radar_always_centered false
 cl_radar_icon_scale_min 0.6
 cl_radar_rotate true
 cl_radar_scale 0.4
+cl_radar_scale_alternate 0.6
 cl_radar_square_with_scoreboard false
 
 //// Misc
@@ -106,7 +107,6 @@ cl_autohelp true
 cl_scoreboard_mouse_enable_binding +attack2
 cl_ping_fade_distance 300
 cl_ping_fade_deadzone 120
-cl_playerspray_auto_apply true
 mapoverview_icon_scale 1.0
 ui_mainmenu_bkgnd_movie_B0B70CFF ar_baggage
 ui_inspect_bkgnd_map_B0B70CFF warehouse
@@ -139,6 +139,12 @@ cl_crosshair_t false
 cl_crosshair_recoil false
 cl_show_observer_crosshair 2
 cl_crosshair_friendly_warning 1
+cl_grenadecrosshair_keepusercrosshair true
+cl_grenadecrosshair_fire false
+cl_grenadecrosshair_flash false
+cl_grenadecrosshair_smoke false
+cl_grenadecrosshair_explosive false
+cl_grenadecrosshair_decoy false
 
 ////
 // Misc
@@ -196,16 +202,6 @@ alias "-drop_bomb" "slot2; slot1"
 alias "bind_sets" "bind B half_buy_1; bind N half_buy_2; bind M eco_buy"
 alias "unbind_sets" "bind B buymenu; bind N sellbackall; bind M teammenu"
 
-//// Desubtick movement (not in use)
-alias "+de_forward" "+forward; +forward"
-alias "-de_forward" "-forward; -forward; -forward"
-alias "+de_back" "+back; +back"
-alias "-de_back" "-back; -back; -back"
-alias "+de_left" "+left; +left"
-alias "-de_left" "-left; -left; -left"
-alias "+de_right" "+right; +right"
-alias "-de_right" "-right; -right; -right"
-
 //// Volume aliases
 alias "volume_up" "volume_set_70"
 alias "volume_down" "volume_set_30"
@@ -221,7 +217,7 @@ alias "mute_players" "voice_off"
 alias "voice_off" "alias mute_players voice_on; snd_voipvolume 0; say_team Players muted."
 alias "voice_on" "alias mute_players voice_off; snd_voipvolume 0.25; say_team Players unmuted."
 
-//// Radar aliases
+//// Radar aliases (not in use)
 alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 1.0"
 alias "radar_scale_big" "cl_radar_scale 0.6; cl_hud_radar_scale 1.2"
 alias "+radar_scale" "radar_scale_big"
@@ -234,9 +230,9 @@ alias "toggle_radar" "radar_hide"
 alias "+duck_ctrl" "+duck; bind G +drop_bomb; bind_sets"
 alias "-duck_ctrl" "-duck; bind G drop; unbind_sets"
 
-//// ALT+C to toggle radar
-alias "+alt" "bind C toggle_radar"
-alias "-alt" "bind C +radar_scale"
+//// ALT+C to zoom radar
+alias "+alt" "bind C toggleradarscale; +show_telemetry"
+alias "-alt" "bind C switchhands; -show_telemetry"
 
 //// Increase volume when walking
 alias "+sprint_shift" "+sprint; volume_up"
@@ -258,11 +254,9 @@ alias "sellbackall_snd" "sellbackall; play ui\menu_focus.vsnd"
 alias "+show_eq" "cl_teamid_overhead_mode 2"
 alias "-show_eq" "cl_teamid_overhead_mode 1"
 
-//// Show scores with telemetry toggle
+//// Show telemetry toggle
 alias "+show_telemetry" "cl_hud_telemetry_ping_show 2; cl_hud_telemetry_net_misdelivery_show 2; cl_hud_telemetry_frametime_show 2"
 alias "-show_telemetry" "cl_hud_telemetry_ping_show 0; cl_hud_telemetry_net_misdelivery_show 0; cl_hud_telemetry_frametime_show 0"
-alias "+showscores_telemetry" "+show_telemetry; +showscores"
-alias "-showscores_telemetry" "-show_telemetry; -showscores"
 
 ////
 // Binds
@@ -284,7 +278,7 @@ bind "MWHEELDOWN" "clutch_mode_toggle" // "mute_players"
 //// Function keys
 bind "ESCAPE" "cancelselect"
 bind "`" "toggleconsole"
-bind "TAB" "+showscores_telemetry"
+bind "TAB" "+showscores"
 unbind "CAPSLOCK"
 bind "SHIFT" "+sprint_shift"
 bind "CTRL" "+duck_ctrl"
@@ -348,7 +342,7 @@ bind "L" "grenades_4"
 //// 3rd row (ZXCVBN) keys
 bind "Z" "slot8" // Smoke
 bind "X" "+jumpthrow"
-bind "C" "+radar_scale"
+bind "C" "switchhands"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
 bind "N" "sellbackall"
