--- a/training.cfg
+++ b/training.cfg
@@ -120,6 +120,7 @@ mp_plant_c4_anywhere false
 mp_anyone_can_pickup_c4 true
 mp_team_intro_time 0
 inferno_flame_lifetime 3
+inferno_flame_lifetime_incendiary 3
 
 // Buy
 mp_buy_anywhere 1
