--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,16 +13,16 @@ net_client_steamdatagram_enable_override 1
 // Audio
 ////
 
-volume 0.25
-snd_menumusic_volume 0
-snd_roundstart_volume 0.01
-snd_roundaction_volume 0.01
-snd_roundend_volume 0.01
-snd_mapobjective_volume 0.09
-snd_tensecondwarning_volume 0.09
-snd_deathcamera_volume 0.09
-snd_mvp_volume 0.01
-snd_voipvolume 0.25
+volume 0.36 // 60%
+snd_menumusic_volume 0 // 0%
+snd_roundstart_volume 0.01 // 10%
+snd_roundaction_volume 0.01 // 10%
+snd_roundend_volume 0.01 // 10%
+snd_mapobjective_volume 0.09 // 30%
+snd_tensecondwarning_volume 0.09 // 30%
+snd_deathcamera_volume 0.09 // 30%
+snd_mvp_volume 0.01 // 10%
+snd_voipvolume 0.25 // 50%
 sv_voiceenable true
 voice_modenable true
 snd_headphone_eq 0
@@ -87,7 +87,7 @@ cl_radar_square_with_scoreboard false
 //// Misc
 +cl_show_team_equipment
 cl_use_opens_buy_menu false
-cl_showloadout true
+cl_showloadout false
 cl_teammate_colors_show 1
 cl_quickinventory_lastinv false
 cl_show_clan_in_death_notice false
@@ -204,13 +204,13 @@ alias "unbind_sets" "bind B buymenu; bind N sellbackall; bind M teammenu"
 
 //// Volume aliases
 alias "volume_up" "volume_set_70"
-alias "volume_down" "volume_set_30"
-alias "volume_set_5" "alias volume_down volume_set_5; alias volume_up volume_set_10; volume 0.003"
-alias "volume_set_10" "alias volume_down volume_set_5; alias volume_up volume_set_30; volume 0.01"
+alias "volume_down" "volume_set_50"
+alias "volume_set_10" "alias volume_down volume_set_10; alias volume_up volume_set_30; volume 0.01"
 alias "volume_set_30" "alias volume_down volume_set_10; alias volume_up volume_set_50; volume 0.09"
-alias "volume_set_50" "alias volume_down volume_set_30; alias volume_up volume_set_70; volume 0.25"
-alias "volume_set_70" "alias volume_down volume_set_50; alias volume_up volume_set_100; volume 0.49"
-alias "volume_set_100" "alias volume_down volume_set_70; alias volume_up volume_set_100; volume 1"
+alias "volume_set_50" "alias volume_down volume_set_30; alias volume_up volume_set_60; volume 0.25"
+alias "volume_set_60" "alias volume_down volume_set_50; alias volume_up volume_set_70; volume 0.36"
+alias "volume_set_70" "alias volume_down volume_set_60; alias volume_up volume_set_80; volume 0.49"
+alias "volume_set_80" "alias volume_down volume_set_70; alias volume_up volume_set_80; volume 0.64"
 
 //// Mute aliases (not in use)
 alias "mute_players" "voice_off"
