--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -22,7 +22,7 @@ snd_mapobjective_volume 0.09 // 30%
 snd_tensecondwarning_volume 0.09 // 30%
 snd_deathcamera_volume 0.09 // 30%
 snd_mvp_volume 0.01 // 10%
-snd_voipvolume 0.25 // 50%
+snd_voipvolume 0.49 // 70%
 sv_voiceenable true
 voice_modenable true
 snd_headphone_eq 0
@@ -211,11 +211,19 @@ alias "volume_set_50" "alias volume_down volume_set_30; alias volume_up volume_s
 alias "volume_set_60" "alias volume_down volume_set_50; alias volume_up volume_set_70; volume 0.36"
 alias "volume_set_70" "alias volume_down volume_set_60; alias volume_up volume_set_80; volume 0.49"
 alias "volume_set_80" "alias volume_down volume_set_70; alias volume_up volume_set_80; volume 0.64"
+alias "volume_voip_up" "volume_voip_set_70"
+alias "volume_voip_down" "volume_voip_set_50"
+alias "volume_voip_set_0" "alias volume_voip_down volume_voip_set_0; alias volume_voip_up volume_voip_set_30; snd_voipvolume 0"
+alias "volume_voip_set_30" "alias volume_voip_down volume_voip_set_0; alias volume_voip_up volume_voip_set_50; snd_voipvolume 0.09"
+alias "volume_voip_set_50" "alias volume_voip_down volume_voip_set_30; alias volume_voip_up volume_voip_set_70; snd_voipvolume 0.25"
+alias "volume_voip_set_70" "alias volume_voip_down volume_voip_set_50; alias volume_voip_up volume_voip_set_70; snd_voipvolume 0.49"
+alias "bind_voip_volume" "bind KP_PLUS volume_voip_up; bind KP_MINUS volume_voip_down"
+alias "unbind_voip_volume" "bind KP_PLUS volume_up; bind KP_MINUS volume_down"
 
 //// Mute aliases (not in use)
 alias "mute_players" "voice_off"
-alias "voice_off" "alias mute_players voice_on; snd_voipvolume 0; say_team Players muted."
-alias "voice_on" "alias mute_players voice_off; snd_voipvolume 0.25; say_team Players unmuted."
+alias "voice_off" "alias mute_players voice_on; volume_voip_set_0; say_team Players muted."
+alias "voice_on" "alias mute_players voice_off; volume_voip_set_70; say_team Players unmuted."
 
 //// Radar aliases (not in use)
 alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 1.0"
@@ -227,8 +235,8 @@ alias "radar_show" "cl_drawhud_force_radar 1; alias toggle_radar radar_hide"
 alias "toggle_radar" "radar_hide"
 
 //// CTRL+G to drop bomb & CTRL+HJKL to buy sets
-alias "+duck_ctrl" "+duck; bind G +drop_bomb; bind_sets"
-alias "-duck_ctrl" "-duck; bind G drop; unbind_sets"
+alias "+duck_ctrl" "+duck; bind G +drop_bomb; bind_voip_volume; bind_sets"
+alias "-duck_ctrl" "-duck; bind G drop; unbind_voip_volume; unbind_sets"
 
 //// ALT+C to zoom radar
 alias "+alt" "bind C toggleradarscale; +show_telemetry"
@@ -251,7 +259,7 @@ alias "-jumpduck" "-duck; -jump"
 alias "sellbackall_snd" "sellbackall; play ui\menu_focus.vsnd"
 
 //// Show equipment toggle (not in use)
-alias "+show_eq" "cl_teamid_overhead_mode 2"
+alias "+show_eq" "cl_teamid_overhead_mode 3"
 alias "-show_eq" "cl_teamid_overhead_mode 1"
 
 //// Show telemetry toggle
