--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -246,12 +246,12 @@ alias "-alt" "bind C switchhands; -show_telemetry"
 alias "+sprint_shift" "+sprint; volume_up"
 alias "-sprint_shift" "-sprint; volume_down"
 
-//// Jump and throw
+//// Jump and throw (not working)
 alias "+throw" "-attack; -attack2"
 alias "+jumpthrow" "+jump; +throw"
 alias "-jumpthrow" "-jump"
 
-//// Jump and crouch
+//// Jump and crouch (not working)
 alias "+jumpduck" "+duck; +jump"
 alias "-jumpduck" "-duck; -jump"
 
@@ -291,7 +291,7 @@ unbind "CAPSLOCK"
 bind "SHIFT" "+sprint_shift"
 bind "CTRL" "+duck_ctrl"
 bind "ALT" "+alt"
-bind "SPACE" "+jumpduck"
+unbind "SPACE"
 
 //// Upper function keys
 bind "F1" "ignorerad"
@@ -349,7 +349,7 @@ bind "L" "grenades_4"
 
 //// 3rd row (ZXCVBN) keys
 bind "Z" "slot8" // Smoke
-bind "X" "+jumpthrow"
+bind "X" "+jump"
 bind "C" "switchhands"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
