--- a/training.cfg
+++ b/training.cfg
@@ -28,7 +28,7 @@ alias "toggle_cam" "toggle_cam_1"
 // Clear smokes aliases
 alias "clear_smokes" "ent_fire smokegrenade_projectile kill; ent_fire decoy_projectile kill; stopsound"
 alias "+alt" "bind X clear_smokes"
-alias "-alt" "bind X +jumpthrow"
+alias "-alt" "bind X +jump"
 
 // Buy aliases
 alias "buy_kevlar" "give item_assaultsuit"
